<resources>
    <string name="app_name">Problem Solver 2.0</string>
    <string name="fwgc_button">FWGC Problem</string>
    <string name="puzzle_button">8 Puzzle Problem</string>
    <string name="app_intro_message">Welcome to the Problem Solver! Choose which problem you would like to solve below.</string>
    <string name="fwgc_intro_text">A farmer and his wolf, goat, and cabbage come to the edge of a river they wish to cross. There is a boat at the river’s edge that only the farmer can row. The farmer can take at most one other object besides himself on a crossing, but if the wolf is left with the goat, the wolf will eat the goat. Similarly if the goat is ever left alone with the cabbage, the goat will eat the cabbage. Devise a sequence of crossings of the river so that all four characters arrive safely on the other side.</string>
    <string name="begin">Begin</string>
    <string name="puzzle_intro_message">A puzzle with 8 characters are shown out of place. Put them back in place in the least amount of moves possible. Shown below is the goal state.</string>
    <string name="fwgc_intro">The Farmer, Wolf, Goat, Cabbage Problem</string>
    <string name="puzzle_intro">The 8-Puzzle Problem</string>
    <string name="solve">Solve</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="fwgc_moves">Farmer Takes:</string>
    <string name="farmer">Farmer</string>
    <string name="wolf">Wolf</string>
    <string name="goat">Goat</string>
    <string name="cabbage">Cabbage</string>
    <string name="errorMessage">Illegal Move. Try Again.</string>
    <string name="congrats">Congratulations! You\'ve Solved the Problem!</string>
    <string name="puzzleIntroGoal">  +---+---+---+\n
                                | 1 | 2 | 3 |\n
                                +---+---+---+\n
                                | 8 |     | 4 |\n
                                +---+---+---+\n
                                | 7 | 6 | 5 |\n
                                +---+---+---+</string>
</resources>
